feat: done docker container, added makefile 'run' instruction, added linter (but not satisfied)
would be great:
*) use go-migrate instead of goose?
*) add handlers for feature and tags?
*) unit tests?
